package com.iting.jobportal.company.entity.enums;

public enum AffiliationStatus {
    INCOMPLETE,
    PENDING,
    APPROVED,
    REJECTED,
    REVOKED
}
