package com.iting.jobportal.company.entity.enums;

public enum CompanyReviewStatus {
    DRAFT,
    PENDING_REVIEW,
    UNDER_REVIEW,
    NEEDS_RESUBMISSION,
    APPROVED,
    REJECTED,
    SUSPENDED
}
