package com.iting.jobportal.company.entity.enums;

public enum DocumentReviewStatus {
    MISSING,
    UPLOADED,
    PENDING_REVIEW,
    APPROVED,
    REJECTED
}
