package com.iting.jobportal.company.entity.enums;

public enum SubmissionStatus {
    NONE,
    DRAFT,
    PENDING_REVIEW,
    APPROVED,
    REJECTED
}
